--- a/Fiscal Year Calendar/Base.lproj/LaunchScreen.storyboard
+++ b/Fiscal Year Calendar/Base.lproj/LaunchScreen.storyboard
@@ -20,12 +20,46 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppSplash" translatesAutoresizingMaskIntoConstraints="NO" id="VpW-p0-YaH">
+                                <rect key="frame" x="67" y="161" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="dpL-nN-tGM"/>
+                                    <constraint firstAttribute="width" constant="240" id="ngA-HJ-HA2"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fiscal Year Calendar" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qcS-H1-GbK">
+                                <rect key="frame" x="52" y="427" width="271" height="37"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="31"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2017 Stephen Ewell" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcV-Fv-1Tq">
+                                <rect key="frame" x="103" y="626" width="168" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="CcV-Fv-1Tq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0et-79-1LX"/>
+                            <constraint firstItem="VpW-p0-YaH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="67" id="2hl-0n-Uet"/>
+                            <constraint firstItem="qcS-H1-GbK" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5Gl-W9-WpL"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="VpW-p0-YaH" secondAttribute="trailing" constant="68" id="Nds-GC-dCp"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="CcV-Fv-1Tq" secondAttribute="bottom" constant="20" id="Ui5-iu-M0Q"/>
+                            <constraint firstItem="VpW-p0-YaH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VKX-lC-1MY"/>
+                            <constraint firstItem="VpW-p0-YaH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-52.5" id="rrC-Yg-pHm"/>
+                            <constraint firstItem="qcS-H1-GbK" firstAttribute="top" secondItem="VpW-p0-YaH" secondAttribute="bottom" constant="26" id="zcO-i5-dZK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AppSplash" width="512" height="512"/>
+    </resources>
 </document>
