--- a/Fiscal Year Calendar/Base.lproj/Main.storyboard
+++ b/Fiscal Year Calendar/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oF5-lx-t20">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oF5-lx-t20">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <navigationController toolbarHidden="NO" id="oF5-lx-t20" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="LFQ-2d-QjV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="jdJ-ze-cAm">
@@ -53,7 +53,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="woH-VR-RRZ">
-                                            <rect key="frame" x="14" y="8" width="23" height="23"/>
+                                            <rect key="frame" x="14" y="0.0" width="23" height="23"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" notEnabled="YES" updatesFrequently="YES"/>
                                             </accessibility>
@@ -77,7 +77,7 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zys-ka-1mC" userLabel="Holiday View">
-                                            <rect key="frame" x="13.666666666666664" y="37" width="23" height="7"/>
+                                            <rect key="frame" x="13.666666666666664" y="29" width="23" height="7"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" notEnabled="YES" updatesFrequently="YES"/>
                                             </accessibility>
@@ -139,10 +139,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Period 13" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbD-EC-7hZ">
-                                    <rect key="frame" x="8" y="13" width="94" height="25.666666666666664"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="94" id="XnM-hv-6eB"/>
-                                    </constraints>
+                                    <rect key="frame" x="8" y="13" width="85.333333333333329" height="25.666666666666664"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -166,8 +163,10 @@
                                 <constraint firstItem="iMG-8A-s8D" firstAttribute="top" secondItem="umW-M6-Lit" secondAttribute="top" constant="46" id="GU5-l9-O1r"/>
                                 <constraint firstItem="gbD-EC-7hZ" firstAttribute="leading" secondItem="umW-M6-Lit" secondAttribute="leading" constant="8" id="M8Y-Cu-iN7"/>
                                 <constraint firstItem="jAh-wv-HFL" firstAttribute="leading" secondItem="umW-M6-Lit" secondAttribute="leading" constant="8" id="SeE-QN-024"/>
+                                <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="gbD-EC-7hZ" secondAttribute="trailing" constant="20" id="cZj-3T-E50"/>
                                 <constraint firstItem="jAh-wv-HFL" firstAttribute="top" secondItem="gbD-EC-7hZ" secondAttribute="bottom" constant="8" id="lfy-hb-L3P"/>
                                 <constraint firstAttribute="trailing" secondItem="iMG-8A-s8D" secondAttribute="trailing" constant="8" id="ls6-IN-Xxs"/>
+                                <constraint firstItem="iMG-8A-s8D" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="jAh-wv-HFL" secondAttribute="trailing" constant="20" id="rzT-OH-t02"/>
                             </constraints>
                             <connections>
                                 <outlet property="endLabel" destination="iMG-8A-s8D" id="RqN-AP-fmu"/>
@@ -221,7 +220,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Holiday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lV2-DO-e4f">
-                                <rect key="frame" x="20" y="72" width="71.333333333333329" height="24"/>
+                                <rect key="frame" x="20" y="72" width="70" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -239,6 +238,7 @@
                             <constraint firstItem="lV2-DO-e4f" firstAttribute="top" secondItem="38Y-WI-8Rr" secondAttribute="bottom" constant="8" id="aSJ-kd-R1Y"/>
                             <constraint firstItem="Jld-v9-bfs" firstAttribute="top" secondItem="lV2-DO-e4f" secondAttribute="bottom" constant="8" id="rT2-BH-ER9"/>
                             <constraint firstItem="Jld-v9-bfs" firstAttribute="trailing" secondItem="4H1-er-Odz" secondAttribute="trailingMargin" id="wio-r9-8hQ"/>
+                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="lV2-DO-e4f" secondAttribute="trailing" constant="20" id="x6O-QA-jdo"/>
                             <constraint firstItem="lV2-DO-e4f" firstAttribute="leading" secondItem="4H1-er-Odz" secondAttribute="leadingMargin" id="yez-bb-sGH"/>
                             <constraint firstItem="Jld-v9-bfs" firstAttribute="trailing" secondItem="4H1-er-Odz" secondAttribute="trailingMargin" id="zvb-77-sob"/>
                         </constraints>
